--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Persistence</string>
     <string name="action_settings">Settings</string>
+    <string name="enterName">Enter name</string>
+    <string name="enterSurname">Enter surname</string>
 </resources>
